# CV

./: .gitignore  Harris.cpp  README.md
CV_FinalTest/: CMakeLists.txt  README.md  risultati
CV_FinalTest/Include/: DetectArea.h  Loader.h  Projection.h
CV_FinalTest/code/: Loader.cpp  Loader.h  Projection.cpp  Projection.h  main_test.cpp  new file
CV_FinalTest/dataset/Output/coord/: coordinates.txt
CV_FinalTest/src/: Projection.cpp  main.cpp
CV_FinalTest/src/Functions/: DetectArea.cpp  Loader.cpp  Projection.cpp
CV_proposal/: coord_finder.cpp
LAB1/: LAB1_1.cpp  LAB1_2.cpp  LAB1_3.cpp  LAB1_4.cpp  LAB1_5.cpp  LAB1_6.cpp
LAB10/: MNIST_classifi.ipynb  catVSdog.ipynb
LAB2/: ImageFilters.cpp  ImageFilters.h  LAB2_1  LAB2_1.cpp  LAB2_2.cpp  LAB2_3.cpp  LAB2_4.cpp  LAB2_5.cpp  LAB2_6.cpp
LAB3/: LAB3_1.cpp  LAB3_2.cpp  LAB3_3.cpp  LAB3_4.cpp  LAB3_5.cpp
LAB4/: LAB4_1.cpp  LAB4_2.cpp  LAB4_3.cpp  LAB4_4.cpp
LAB7/: CMakeLists.txt
LAB7/Include/: CylindricalProjection.h  FindTranslation.h  ImageLoader.h  MatchFeatures.h  RefineMatches.h
LAB7/src/: CMakeLists.txt  CylindricalProjection.cpp  FindTranslation.cpp  ImageLoader.cpp  MatchFeatures.cpp  RefineMatches.cpp  main.cpp
LAB8/: CMakeLists.txt
LAB8/Include/: ImageLoader.h  create3DChessboardCorners.h
LAB8/src/: main.cpp
LAB8/src/Functions/: create3DChessboardCorners.cpp
Lectures/: 1) Digital Image Processing.docx  2) Advanced Image Processing and Segmentation.docx  3) Object Recognition.docx  4) Camera Models.docx  5) Deep Learning Study Guide.docx
